--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.bigdatafly.elasticsearch</groupId>
-  <artifactId>elasticsearch-rocketmq-river</artifactId>
+  <artifactId>elasticsearch-river-rocketmq</artifactId>
   <version>1.0.1-SNAPSHOT</version>
-  <name>elasticsearch-rocketmq-river</name>
+  <name>elasticsearch-river-rocketmq</name>
   <description>elasticsearch rocketmq river</description>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+  <dependencies>
+  	<dependency>
+            <groupId>com.alibaba.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>3.2.6</version>
+    </dependency>
+    <!-- http://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
+	<dependency>
+	    <groupId>org.elasticsearch</groupId>
+	    <artifactId>elasticsearch</artifactId>
+	    <version>2.3.2</version>
+	</dependency>
+	
+  </dependencies>
 </project>
